--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div>
-        <a href="/registro">Registrarse</a>
+        <a href="/register">Registrarse</a>
       </div>
     </div>
   </div>
