--- a/main/templates/travels.html
+++ b/main/templates/travels.html
@@ -25,8 +25,8 @@
                         <td>{{trip.travel_date_from}}</td>
                         <td>{{trip.travel_date_to}}</td>
                         <td>{{trip.description}}</td>
-                        <td><a href="/">Cancel</a></td>
-                        <td><a href="/">Delete</a></td>
+                        <td><a href="/cancel">Cancel</a></td>
+                        <td><a href="/delete">Delete</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
