--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -27,8 +27,11 @@
         <div class="d-flex">
           <a class="btn btn-outline-primary" href="/addtrip">Crear un viaje</a>
         </div>
+        <li class="d-flex">
+          <a class="btn btn-outline-warning ms-2" href="/travels">Regresar</a>
+          </li>
         <div class="d-flex">
-          <a class="btn btn-outline-success" href="/logout">Logout</a>
+          <a class="btn btn-outline-success ms-2" href="/logout">Finalizar sesión</a>
         </div>
       </div>
     </div>
