--- a/main/templates/addtrip.html
+++ b/main/templates/addtrip.html
@@ -30,12 +30,12 @@
               <input type="text" class="form-control" id="description" name="description">
             </div>
             <div class="mb-3">
-              <label for="password_confirm" class="form-label">Inicio del viaje</label>
+              <label for="date" class="form-label">Inicio del viaje</label>
               <input type="date" class="form-control" id="travel_date_from" name="travel_date_from">
             </div>
             <input type="hidden" name="role" value="user">
             <div class="mb-3">
-                <label for="password_confirm" class="form-label">Fin del viaje</label>
+                <label for="date" class="form-label">Fin del viaje</label>
                 <input type="date" class="form-control" id="travel_date_to" name="travel_date_to">
               </div>
     
